# Malt

./: .gitignore  LICENSE  LICENSE - DEPENDENCIES  LICENSE - DEPENDENCIES (FULL TEXT)  README.md  SPONSORS.md  __init__.py  _sidebar.md  index.html
.github/: FUNDING.yml  download.md
BlenderMalt/: MaltLights.py  MaltMaterial.py  MaltMeshes.py  MaltNodes.py  MaltPipeline.py  MaltProperties.py  MaltRenderEngine.py  MaltTextures.py  MaltUtils.py  Material.py  Properties.py  RenderEngine.py  __init__.py  readme.md
BlenderMalt/CBlenderMalt/: CBlenderMalt.cpp  CMakeLists.txt  MaltMeshes.cpp  __init__.py  build.py
BlenderMalt/CBlenderMalt/blender_dna/: BLI_sys_types.h  DNA_ID.h  DNA_ID_enums.h  DNA_customdata_types.h  DNA_defs.h  DNA_listBase.h  DNA_mesh_types.h  DNA_meshdata_types.h  DNA_session_uuid_types.h
Bridge/: Client_API.py  Docs.py  Material.py  Mesh.py  Proxys.py  Render.py  Server.py  Texture.py  __init__.py
Bridge/ipc/: CMakeLists.txt  __init__.py  ipc.c  ipc.h
Bridge/renderdoc/: CMakeLists.txt  __init__.py  renderdoc_wrapper.c
Malt/: Parameter.py  Pipeline.py  PipelineGraph.py  PipelineNode.py  PipelineParameters.py  PipelinePlugin.py  Scene.py  SourceTranspiler.py  Utils.py  __init__.py  readme.md
Malt/GL/GLSLParser/: CMakeLists.txt  build.py
Malt/GL/GLSLParser/src/: main.cpp
MaltAddons/: CustomPipeline.py  CustomPostprocess.glsl
Shader Examples/: CustomPipeline.py  advanced_bake.mesh.glsl  advanced_custom_shading.glsl  advanced_custom_shading.mesh.glsl  advanced_line.glsl  advanced_line.mesh.glsl  advanced_normal_map.mesh.glsl  advanced_sdf.mesh.glsl  basic.glsl  basic.light.glsl  basic.mesh.glsl  basic.screen.glsl  basic_ao.mesh.glsl  basic_cast_shadows.mesh.glsl  basic_curvature.glsl  basic_curvature.mesh.glsl  basic_displacement.glsl  basic_displacement.mesh.glsl  basic_gradient.glsl  basic_gradient.mesh.glsl  basic_line.glsl  basic_line.mesh.glsl  basic_matcap.mesh.glsl  basic_mix.glsl  basic_mix.mesh.glsl  basic_normal_map.glsl  basic_normal_map.mesh.glsl  basic_rim.glsl  basic_rim.mesh.glsl  basic_surface_gradient.mesh.glsl  basic_texture.glsl  basic_texture.mesh.glsl  basic_transparency.mesh.glsl  basic_vertex_shader.glsl  basic_vertex_shader.mesh.glsl  debug_cascades.mesh.glsl  gradient_lambert_phong.glsl  half_lambert_phong.glsl  line_half_lamber_phong.glsl  test_hdri copy.mesh.glsl  (+1 more)
(+289 files in other folders)
